--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <br>
 <br>
    <p><i>Какие инстранные языки вы хотели бы изучить?</i></p>
-       <select name="days" multiple size="5">
+       <select name="languages" multiple size="5">
          <option>Итальянский</option>
          <option>Английский</option>
          <option>Немецкий</option>
