--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <br>
 <br>
 <br>
-   <p><i>Какие инстранные языки вы хотели бы изучить?</i></p>
+   <p><i>Какие иностранные языки вы хотели бы изучить?</i></p>
        <select name="languages" multiple size="5">
          <option>Итальянский</option>
          <option>Английский</option>
