--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
  </aside>
  <section class="idea-rules">
  <h1>Правила игры</h1>
- <p>Вы можете тренировать визуальную память и одновременно учить инстранные слова!</p>
+ <p>Вы можете тренировать визуальную память и одновременно учить иностранные слова!</p>
  <p>Нужно выбрать 2 одинаковые карточки, догадаться о значении слов, запомнить это значение.</p>
  <p>После того, как удастся открыть все карточки, - появится результат: перевод слов.</p>
  </section>
  </article>
  <section class="photos">
  <figure class="slides">
- <img src="https://static.tildacdn.com/tild3533-6130-4163-a166-633737323530/cards-1.jpg" width="300" height="300"  alt="">
- <img src="https://static.tildacdn.com/tild3766-3065-4436-b866-623664383565/cards-2.jpg" width="300" height="300"  alt="">
+ <img src="https://static.tildacdn.com/tild3533-6130-4163-a166-633737323530/cards-1.jpg" width="280" height="280"  alt="">
+ <img src="https://static.tildacdn.com/tild3766-3065-4436-b866-623664383565/cards-2.jpg" width="280" height="280"  alt="">
  
  
    <form action="https://send.pageclip.co/fz6PZbNKSoeKUoPsh6BLuBzRsVG40HJw" class="pageclip-form" method="post">
